--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,3 @@
-Uploads/
-Mingshi/Runtime/Cache/
-Mingshi/Runtime/Logs/
 admin/Runtime/Cache/
-admin/Runtime/Logs/
-conf/
+Uploads/
+Mingshi/Runtime/
